@@ -4,7 +4,6 @@ import java.time.LocalDateTime;
 import java.util.Collection;
 import java.util.HashSet;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
@@ -78,8 +77,11 @@ public class User implements UserDetails {
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
         return roles.stream()
-                .map(role -> new SimpleGrantedAuthority(role.getName()))
-                .collect(Collectors.toList());
+                .map(Role::getName)
+                .filter(name -> name != null && !name.isBlank())
+                .map(name -> name.startsWith("ROLE_") ? name : "ROLE_" + name)
+                .map(SimpleGrantedAuthority::new)
+            .toList();
     }
 
     // Spring hỏi: Tài khoản có bị hết hạn không? -> Trả lời: Không (true)
